# letterboxd

./: README.md  cache_results.py  download.py  mypy.ini  requirements.txt  requirements_dev.txt  setup.cfg  tox.ini
.github/workflows/: tests.yml
src/: download.py  test.py
src/letterboxd-to-imdb/: download.py
src/letterboxd_convert/: __init__.py  __main__.py  database.py  download.py  parse.py  test.py
tests/: test_database.py  test_download.py
