[metadata]
name = letterboxd-to-imdb-gusberinger
version = 1.1
author = Gus Beringer
author_email = gusberinger@gmail.com
description = Convert letterboxd lists to a list of imdbIDs.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/gusberinger/letterboxd
project_urls =
    Bug Tracker = https://github.com/gusberinger/letterboxd/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    bs4
    httpx

[options.packages.find]
where = src

[options.entry_points]
console_scripts =
    letterboxd-convert = letterboxd_convert.__main__:main

[flake8]
max-line-length = 88